Fixed de-activate test, made it use

--- a/robot/results/report.html
+++ b/robot/results/report.html
@@ -1582,22 +1582,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,6304],[],[[5,0,1,6,[7,8],[0,254,6048,9],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,15848],[],[[5,0,1,6,[7,8,9],[0,300,15547,10],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Springster-Demo-Site","*/Users/jasonb/projects/girleffect/core-general/robot/tests/Springster-Demo-Site.robot","*../tests/Springster-Demo-Site.robot","*<p>This is a set of tests for the Springster demo site.\x3c/p>","*End user registration with missing fields","*<p>WHEN a user does not complete the mandatory fields THEN the system should display an error message in red text\x3c/p>","*copy","*end-user","*Variable '&amp;{test_user}' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Springster-Demo-Site","*/Users/jasonb/projects/girleffect/core-general/robot/tests/Springster-Demo-Site.robot","*../tests/Springster-Demo-Site.robot","*<p>This is a set of tests for the Springster demo site.\x3c/p>","*De-activate end user","*<p>De-activate an end-user and ensure they are blocked from accessing the site.\x3c/p>","*de-activate","*end-user","*ready","*Text 'Your account has been deactivated. Please contact support.' did not appear in 5 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:06","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:06","fail":1,"label":"copy","pass":0},{"elapsed":"00:00:06","fail":1,"label":"end-user","pass":0}],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"Springster-Demo-Site","name":"Springster-Demo-Site","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:16","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:16","fail":1,"label":"de-activate","pass":0},{"elapsed":"00:00:16","fail":1,"label":"end-user","pass":0},{"elapsed":"00:00:16","fail":1,"label":"ready","pass":0}],[{"elapsed":"00:00:16","fail":1,"id":"s1","label":"Springster-Demo-Site","name":"Springster-Demo-Site","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1527156011008;
+window.output["baseMillis"] = 1527491126162;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6312;
+window.output["generated"] = 15862;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
