--- a/robot/results/report.html
+++ b/robot/results/report.html
@@ -1582,22 +1582,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,10291],[],[[5,0,1,6,[7,8],[0,294,9995,9],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,11381],[],[[5,0,1,6,[7,8],[0,388,10991,9],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Springster-Demo-Site","*/Users/jasonb/projects/girleffect/core-general/robot/tests/Springster-Demo-Site.robot","*../tests/Springster-Demo-Site.robot","*<p>This is a set of tests for the Springster demo site.\x3c/p>","*End user registration with missing fields","*<p>WHEN a user does not complete the mandatory fields THEN the system should display an error message in red text\x3c/p>","*copy","*end-user","*No keyword with name 'springster.Assert Registration Errors' found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Springster-Demo-Site","*/Users/jasonb/projects/girleffect/core-general/robot/tests/Springster-Demo-Site.robot","*../tests/Springster-Demo-Site.robot","*<p>This is a set of tests for the Springster demo site.\x3c/p>","*End user registration with missing fields","*<p>WHEN a user does not complete the mandatory fields THEN the system should display an error message in red text\x3c/p>","*copy","*end-user","*Element with locator '<a href=\"xpath://*[@id=&quot;content&quot;]/form/div[4]/div[1]/ul/li\">xpath://*[@id=\"content\"]/form/div[4]/div[1]/ul/li\x3c/a>' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:10","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:10","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:10","fail":1,"label":"copy","pass":0},{"elapsed":"00:00:10","fail":1,"label":"end-user","pass":0}],[{"elapsed":"00:00:10","fail":1,"id":"s1","label":"Springster-Demo-Site","name":"Springster-Demo-Site","pass":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:11","fail":1,"label":"Critical Tests","pass":0},{"elapsed":"00:00:11","fail":1,"label":"All Tests","pass":0}],[{"elapsed":"00:00:11","fail":1,"label":"copy","pass":0},{"elapsed":"00:00:11","fail":1,"label":"end-user","pass":0}],[{"elapsed":"00:00:11","fail":1,"id":"s1","label":"Springster-Demo-Site","name":"Springster-Demo-Site","pass":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1527495505430;
+window.output["baseMillis"] = 1527499629054;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 10306;
+window.output["generated"] = 11399;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
