--- a/robot/results/report.html
+++ b/robot/results/report.html
@@ -1582,22 +1582,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[1,0,12699],[],[[5,0,1,6,[7,8,9],[1,402,12295],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,4,[],[1,0,10538],[],[[5,0,1,6,[7,8],[1,430,10107],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Springster-Demo-Site","*/Users/jasonb/projects/girleffect/core-general/robot/tests/Springster-Demo-Site.robot","*../tests/Springster-Demo-Site.robot","*<p>This is a set of tests for the Springster demo site.\x3c/p>","*De-activate end user","*<p>De-activate an end-user and ensure they are blocked from accessing the site.\x3c/p>","*de-activate","*end-user","*ready"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Springster-Demo-Site","*/Users/jasonb/projects/girleffect/core-general/robot/tests/Springster-Demo-Site.robot","*../tests/Springster-Demo-Site.robot","*<p>This is a set of tests for the Springster demo site.\x3c/p>","*End user registration with missing fields","*<p>WHEN a user does not complete the mandatory fields THEN the system should display an error message in red text\x3c/p>","*end-user","*wip"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:12","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:12","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:12","fail":0,"label":"de-activate","pass":1},{"elapsed":"00:00:12","fail":0,"label":"end-user","pass":1},{"elapsed":"00:00:12","fail":0,"label":"ready","pass":1}],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Springster-Demo-Site","name":"Springster-Demo-Site","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1}],[{"elapsed":"00:00:10","fail":0,"label":"end-user","pass":1},{"elapsed":"00:00:10","fail":0,"label":"wip","pass":1}],[{"elapsed":"00:00:11","fail":0,"id":"s1","label":"Springster-Demo-Site","name":"Springster-Demo-Site","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1527715499648;
+window.output["baseMillis"] = 1527753147962;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12712;
+window.output["generated"] = 10553;
 </script>
 <script type="text/javascript">
 window.settings = {"background":{"fail":"#f66","nonCriticalFail":"#9e9","pass":"#9e9"},"logURL":"log.html","title":""};
